Enum Role {
  ADMIN
  EDITOR
  VIEWER
}

Enum Visibility {
  PUBLIC
  PRIVATE
  LINK_ONLY
}

Table users {
  id String [pk, note: 'Primary key (UUIDv7)']
  email String [unique, not null, note: 'Unique login email']
  name String [not null, note: 'Display name']
  role Role [default: 'VIEWER', not null]
  interests String[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  Note: '''Application user. Fully annotated for every validator generator,
with a UUIDv7 primary key, enum default, scalar list, @map columns,
@updatedAt, and relations of every cardinality.'''
}

Table Profile {
  id String [pk]
  userId String [unique, not null]
  bio String
  nickname String [default: 'anonymous', not null]
  age Int
  balance Decimal [default: 0, not null]
  verified Boolean [default: false, not null]
  meta Json
  avatar Bytes
  lastSeen DateTime

  Note: '''One-to-one relation with native @db.* types, literal defaults,
and optional scalars of every flavour. ConfigDict passthrough: the
Pydantic model rejects unknown keys (extra=\'forbid\').'''
}

Table posts {
  id String [pk, note: 'Primary key']
  title String [not null, note: 'Article title']
  content String
  visibility Visibility [default: 'LINK_ONLY', not null]
  published Boolean [default: false, not null]
  viewCount Int [default: 0, not null]
  authorId String [not null]
  createdAt DateTime [default: `now()`, not null]

  Note: '''@@map + @map column names, FK with a referential action,
mapped-enum default, and an implicit many-to-many to Tag.'''
}

Table Tag {
  id Int [pk, increment]
  label String [unique, not null]

  Note: 'Implicit many-to-many partner of Post (join table `_PostToTag`).'
}

Table comments {
  id Int [pk, increment]
  body String [not null]
  postId String [not null]
  authorId String
  createdAt DateTime [default: `now()`, not null]

  Note: '''Two foreign keys with different referential actions
(Cascade vs SetNull) and a composite index.'''
}

Table follows {
  followerId String [not null]
  followingId String [not null]
  since DateTime [default: `now()`, not null]

  indexes {
    (followerId, followingId) [pk]
  }

  Note: 'Composite primary key + two named relations to the same model.'
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  parentId Int

  indexes {
    (parentId, name) [unique]
  }

  Note: 'Self-relation (adjacency-list tree) with a composite unique.'
}

Table orders {
  id BigInt [pk, increment]
  userId String [not null]
  total Decimal [not null]
  placedAt DateTime [default: `now()`, not null]

  Note: 'BigInt autoincrement primary key (bigserial) and money as Decimal.'
}

Table order_items {
  id BigInt [pk, increment]
  orderId BigInt [not null]
  sku String [not null]
  qty Int [default: 1, not null]
  price Decimal [not null]

  indexes {
    (orderId, sku) [unique]
  }

  Note: 'Child of Order with a composite unique constraint.'
}

Table audit_logs {
  id String [pk]
  action String [not null]
  payload Json [default: '{}', not null]
  signature Bytes
  loggedAt DateTime [not null]

  Note: 'DB-side generated defaults (dbgenerated) plus Json / Bytes payloads.'
}

Table Actor {
  id Int [pk, increment]
  name String [not null]

  Note: '''Named implicit many-to-many: the join table is `_cast`,
not `_ActorToFilm`.'''
}

Table Film {
  id Int [pk, increment]
  title String [not null]
}

Ref Profile_userId_fk: Profile.userId - users.id [delete: cascade]

Ref posts_authorId_fk: posts.authorId > users.id [delete: cascade]

Ref comments_postId_fk: comments.postId > posts.id [delete: cascade]

Ref comments_authorId_fk: comments.authorId > users.id [delete: set null]

Ref follows_followerId_fk: follows.followerId > users.id [delete: cascade]

Ref follows_followingId_fk: follows.followingId > users.id [delete: cascade]

Ref Category_parentId_fk: Category.parentId > Category.id

Ref orders_userId_fk: orders.userId > users.id

Ref order_items_orderId_fk: order_items.orderId > orders.id [delete: cascade]